adding basic configuration to server && restructured src folder on client

--- a/server/package.json
+++ b/server/package.json
@@ -1,8 +1,11 @@
 {
   "name": "expressjs-react-basic",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "app.js",
   "license": "MIT",
+  "scripts": {
+    "start": "nodemon app.js"
+  },
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
