Added middleware for auth, setup routes for auth, updated .env.template

--- a/server/.env.template
+++ b/server/.env.template
@@ -1,1 +1,2 @@
 DB_URL = mongodb+srv://<yourusername>:<password>@cluster0.fykep.mongodb.net/<dbname>?retryWrites=true&w=majority
+JWT_SECRET = 'yoursecret'
